kubernetics/mongo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb 
    spec:
      containers:
      - name: mongodb 
        image: mongo:3.3 
        ports:
        - containerPort: 27017
