kubernetics/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsvp 
  labels:
    run: rsvp 
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: web-port 
    protocol: TCP
  selector:
    app: rsvp
