kubernetics/sockshop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socks-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "cy.sockshop.com"
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
